[package]
name = "NaiveKV"
version = "0.1.0"
edition = "2021"
authors = ["Devin Zuo"]

[lib]
name = "naive_kv"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.32.0"
crossbeam="0.8.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
protobuf="2.25.2"
rand="0.8.4"

[build-dependencies]
protoc-rust = "2.25.2"
